Added Confirm Order

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Products</title>
+	<title>Bhide Products</title>
+	<meta name="description" content="Building Products & Add to Cart Functionality using Svelte" />
 	%sveltekit.head%
 	<!-- Inter font  -->
 	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
